# metamorphocus

./: metamorphocus.db
metamorphocus/: .gitignore  app.py  database.py  downloaded-test-attachment.txt  pyproject.toml  replit.md  sales.py  start.bat  start.sh
metamorphocus/attached_assets/: pieces of colorado_1763524209945.html
metamorphocus/templates/: index.html  login.html  manager_redirect.html
